# community-cloud-storage

./: BUG-add-returns-empty-entries.md  BUG-get-downloads-html-instead-of-files.md  CARS file lifecycle.md  CLUSTER-INVESTIGATION.md  FR-download-get-operations.md  README.md  config.yml.example  install.sh  pyproject.toml
api/: Dockerfile  app.py  requirements.txt
database/init/: 01-create-schema.sql
deployment/local/: .gitignore  README.md  START-HERE.md  docker-compose.yml  setup.sh  test-workflow.sh
deployment/local/ipfs-init/: entrypoint.sh
docs/: BUG-cluster-not-persisting-pins.md  BUG-is_fully_pinned-and-missing-allocations.md  FIX-PLAN-empty-entries-bug.md  IMPLEMENTATION_PLAN.md  REFERENCE.md  RUNBOOK.md  ansible-task-report-20260113.md  architecture-plan.md  docker-setup.md  get-operation-implementation.md  ipfs-cluster-metadata.md  ipfs-cluster-rebalancing.md  ipfs-cluster-research.md  runbook-cluster-debugging.md  setup-log.md  test-plan-phase1.md  workflow.md
docs/archived/: ccs-status-2025-01-06.md
examples/: ccs.toml
src/community_cloud_storage/: __init__.py  cli.py  cluster_api.py  compose.py  compose.yml  config.py  operations.py  types.py
test/: test_cluster_api.py  test_compose.py  test_config.py  test_integration.py  test_operations.py  test_types.py
ui/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
ui/src/: App.vue
