[project]
name = "community-cloud-storage"
version = "0.4.0"
description = "Distributed storage for community archives using ipfs-cluster, Tailscale and Docker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "requests-toolbelt>=1.0.0",
]
# Note: pyyaml is still needed by compose.py (Docker Compose YAML handling).
# config.py uses tomllib (stdlib, Python 3.11+) for toml config.
packages = ["community_cloud_storage"]

[project.urls]
repository = "https://github.com/historypin/community-cloud-storage"

[project.scripts]
community-cloud-storage = "community_cloud_storage.cli:cli"
ccs = "community_cloud_storage.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
